@@ -187,8 +187,8 @@ Artist</property>
 		<widget class="GtkButton" id="tag_button">
 		  <property name="visible">True</property>
 		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">Add Tag</property>
-		  <property name="use_underline">True</property>
+		  <property name="label">gtk-add</property>
+		  <property name="use_stock">True</property>
 		  <property name="relief">GTK_RELIEF_NORMAL</property>
 		  <property name="focus_on_click">True</property>
 		</widget>
